--- a/server-rs/Cargo.toml
+++ b/server-rs/Cargo.toml
@@ -22,6 +22,9 @@ sqlx = { version = "0.8.6", features = [
   "chrono",
 ] }
 
+# Add separate dependency for SQLite bundled feature
+libsqlite3-sys = { version = "*", features = ["bundled"] }
+
 tower = "0.5"
 tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
 futures = "0.3"
