--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,13 @@
     "prepare": "cd .. && husky install || echo 'Husky not available'"
   },
   "dependencies": {
+    "marked": "^16.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
